# django-study-record

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pyproject_poetry.bak
myproject/: .gitignore  Dockerfile  asgi.py  conftest.py  docker-entrypoint.sh  pyproject.toml  settings.py  urls.py  views.py  wsgi.py
myproject/appendixapp/: pagination.py  serializers.py  tests.py  urls.py  views.py
myproject/appendixapp/fixtures/: sample_fixture.json
myproject/appendixapp/migrations/: 0001_initial.py
myproject/appendixapp/templates/appendixapp/: create.html  two.html
myproject/bookapp/: admin.py  apps.py
myproject/bookapp/migrations/: 0002_book_cover_image.py
myproject/bookapp/templates/bookapp/: book_confirm_delete.html  book_list.html
myproject/educationapp/: apps.py
myproject/educationapp/fixtures/: student_fixture.json
myproject/educationapp/migrations/: 0001_initial.py  0002_profile.py  0003_schoolclass.py  0004_student_class_assignment.py
myproject/helloapp/: apps.py  urls.py
myproject/items/: api.py  models.py  schemas.py
myproject/items/fixtures/: initial_data.json
myproject/items/migrations/: 0001_initial.py
myproject/items/tests/: test_api.py
myproject/myproject/: auth_api.py  custom_auth.py  settings.py  test_api.py  urls.py  views.py
myproject/myproject/tests/: test_auth_api.py
myproject/static/: menu.css
myproject/templates/: items_vanilla.html
myproject/todoapp/: urls.py  views.py
myproject/todoapp/migrations/: 0002_todo_user.py
(+97 files in other folders)
