[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "yook11",email = "pv4qjwdfg2@privaterelay.appleid.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "django-pandas (>=0.6.7,<0.7.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
